--- a/TestExcel/Views/Shared/_Navbar.cshtml
+++ b/TestExcel/Views/Shared/_Navbar.cshtml
@@ -54,7 +54,7 @@
             border-bottom: 2px solid black;
             background-color: #cccccc;
             color: white;
-            font-size: 18px;
+            font-size: 16px;
         }
     #notiContent {
         min-width: 400px;
@@ -106,7 +106,7 @@
                     var tmp_datelast = date.indexOf(value.SECTION_DATE_Last);
 
                     $("#notiContent").append($('<li><a href="/TimeSchedule/TeSchedule/' + value.SECTION_ID_First + '/' + value.SECTION_CLASSROOM_First + '?SUBJECTid='
-                        + value.SUBJECT_ID_First + '&BR_SEMESTER=' + value.SEMESTER + '&BR_YEAR='
+                        + value.SUBJECT_ID_First + "_" + value.SUBJECT_ID_Last + '&BR_SEMESTER=' + value.SEMESTER + '&BR_YEAR='
                         + value.YEAR + '&color=#ff0000">'
                         + value.SUBJECT_ID_First + " " + datethai[parseInt(tmp_datefirst)] + " ตอน "
                         + value.SECTION_NUMBER_First + " ห้อง " + value.SECTION_CLASSROOM_First + " " + value.SEMESTER + "/" + value.YEAR + "<br>"
