--- a/TestExcel/Views/TimeSchedule/DSchedule.cshtml
+++ b/TestExcel/Views/TimeSchedule/DSchedule.cshtml
@@ -136,7 +136,7 @@
                     {
                         <tr>
                             <td>
-                                @Html.CheckBox("check" + i)
+                                @Html.CheckBox("check" + i,new { @class = "tablecheckbox" })
                                 @Html.Hidden("subject_hour", item.SECTION_TIME_END - item.SECTION_TIME_START)
 
                                 @Html.Hidden("sub_id", item.SECTION_ID)
@@ -177,7 +177,7 @@
                         var TIME = (tmp_last - tmp_first);
                         <tr>
                             <td>
-                                @Html.CheckBox("check" + i)
+                                @Html.CheckBox("check" + i,new { @class = "tablecheckbox" })
                                 @Html.Hidden("subject_hour", TIME)
 
                                 @Html.Hidden("sub_id", first.SECTION_ID)
@@ -405,6 +405,7 @@
     <br>
 }
 <br>
+<input id="gate" name="gate" value="">
 @using (Html.BeginForm("updatedata", "TimeSchedule", FormMethod.Post))
 {
     @Html.Hidden("BR_NAME", BRANCH_NAME);
@@ -461,6 +462,7 @@
                             var TIME = (TIME_END - TIME_START) * 4;
                             <td id="@tid" colspan="@TIME" class="droppable revert" width="60px">
                                 <div class="draggable getdata" style="background-color:@color;width:100%;height:50px">
+                                    <div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>
                                     <p>
                                         @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER
                                     </p>
@@ -495,6 +497,7 @@
                                 var TIME = (tmp_last - tmp_first) * 4;
                                 <td id="@tid" colspan="@TIME" width="60px" class="droppable">
                                     <div class="draggable getdata" style="background-color:@color;height:50px">
+                                        <div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>
                                         <p>
                                             @first.SUBJECT_ID @first.SUBJECT_NAME ตอน @first.SECTION_NUMBER
                                         </p>
@@ -530,6 +533,7 @@
                                 var TIME = (TIME_END - TIME_START) * 4;
                                 <td id="@tid" colspan="@TIME" width="60px" class="droppable">
                                     <div class="draggable getdata" style="background-color:@color;width:100%;height:50px">
+                                        <div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>
                                         <p>
                                             @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER
                                         </p>
