--- a/TestExcel/Views/TimeSchedule/ClSchedule.cshtml
+++ b/TestExcel/Views/TimeSchedule/ClSchedule.cshtml
@@ -66,6 +66,7 @@ else
                             <option value="42">อาคารเรียน 42</option>
                             <option value="69">อาคารเรียน 69</option>
                             <option value="64">อาคารเรียน 64</option>
+                            <option value="1">อื่น ๆ</option>
                         </select>
                     </td>
                     <td colspan="5">
