--- a/TestExcel/Views/Login/Index.cshtml
+++ b/TestExcel/Views/Login/Index.cshtml
@@ -1,5 +1,10 @@
-﻿@{
+﻿@model IEnumerable<TestExcel.Models.Section_Subject>
+@{
     ViewBag.Title = "Index";
+}
+@foreach (var i in Model.OrderBy(x => x.SECTION_CLASSROOM))
+{
+<p>@i.SECTION_CLASSROOM</p>
 }
 <div class="w3-container center-block" style="width:400px;margin-top:100px">
     <div class="panel panel-default">
